[package]
name = "construct-relay"
version = "0.3.4"
edition = "2024"
description = "One-command relay for Construct messenger — deploys in minutes, no TLS certs or nginx required"
license = "MIT"

[[bin]]
name = "construct-relay"
path = "src/main.rs"

[dependencies]
construct-ice = { git = "https://github.com/maximeliseyev/construct-ice", features = ["webtunnel", "server"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8"
rcgen = "0.13"
x509-cert = { version = "0.2", default-features = false, features = ["std"] }
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Uncomment for local development against a checked-out construct-ice:
# [patch."https://github.com/maximeliseyev/construct-ice"]
# construct-ice = { path = "../construct-ice" }

[profile.release]
opt-level = 3
lto = true
strip = true
